--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/Gabcot/tapfiliate/issues"
   },
-  "homepage": "https://github.com/Gabcot/tapfiliate#readme"
+  "homepage": "https://github.com/Gabcot/tapfiliate#readme",
+  "dependencies": {
+    "request": "^2.88.0"
+  }
 }
